--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -43,7 +43,7 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>redirect.jsp</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
     <jsp-config>
         <taglib>
