--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -31,8 +31,20 @@ welcome.message=It's easy to create news!
 footer.message=Copyright EPAM 2014. All rights reserved.
 header.language.en=English
 header.language.ru=Russian
+label.view=view
+label.edit=edit
+button.delete=DELETE
+button.edit=EDIT
+button.save=SAVE
+button.cancel=CANCEL
 # -- menu --
 menu.header=News
 menu.label.list=News List
 menu.label.add=Add News
+menu.label.view=News View
+# -- newsform --
+news.title=News Title
+news.date=News Date
+news.brief=Brief
+news.content=Content
 
