start modify struts struts config spring config pages config

--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -37,6 +37,8 @@ button.delete=DELETE
 button.edit=EDIT
 button.save=SAVE
 button.cancel=CANCEL
+label.en=English
+label.ru=Russian
 # -- menu --
 menu.header=News
 menu.label.list=News List
