--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -23,6 +23,8 @@ errors.cancel=Operation cancelled.
 errors.detail={0}
 errors.general=The process did not complete. Details should follow.
 errors.token=Request could not be completed. Operation is not in sequence.
+errors.confirmation=There are no selected news. Please select news for delete.
+msg.confirmation=Are you sure you want to delete this news?
 # -- welcome --
 welcome.title=News Management
 welcome.heading=Welcome to News management!
