--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.ojdbc6.jar=C:\\Program Files\\Java\\ojdbc6.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -39,7 +40,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.jstl.classpath}:\
     ${libs.struts.classpath}:\
-    ${libs.spring-framework300.classpath}
+    ${libs.spring-framework300.classpath}:\
+    ${file.reference.ojdbc6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
