--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -25,6 +25,12 @@ errors.general=The process did not complete. Details should follow.
 errors.token=Request could not be completed. Operation is not in sequence.
 errors.confirmation=There are no selected news. Please select news for delete.
 msg.confirmation=Are you sure you want to delete this news?
+errors.required.title=Title is required.
+errors.required.brief=Brief is required.
+errors.required.content=Content is required.
+errors.maxLength.title=Title can not be greater than {0} characters.
+errors.maxLength.brief=Brief can not be greater than {0} characters.
+errors.maxLength.content=Content can not be greater than {0} characters.
 # -- welcome --
 welcome.title=News Management
 welcome.heading=Welcome to News management!
