--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -39,12 +39,24 @@
     </servlet-mapping>
     <session-config>
         <session-timeout>
-            3
+            10
         </session-timeout>
     </session-config>
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+    <filter>
+        <filter-name>EncodingFilter</filter-name>
+        <filter-class>com.epam.testapp.presentation.filter.EncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value> utf-8 </param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>EncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <jsp-config>
         <taglib>
             <taglib-uri>/WEB-INF/struts-bean.tld</taglib-uri>
