--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -35,7 +35,7 @@ errors.maxLength.brief=Brief can not be greater than {0} characters.
 errors.maxLength.content=Content can not be greater than {0} characters.
 errors.strdate.parse=Date is not a date.
 # -- welcome --
-welcome.title=News Management
+welcome.title=News management
 welcome.heading=Welcome to News management!
 welcome.message=It's easy to create news!
 # -- common --
