--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.ojdbc6.jar=C:\\Program Files\\Java\\ojdbc6.jar
+file.reference.log4j.jar=lib/log4j.jar
+file.reference.ojdbc6.jar=lib/ojdbc6.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,7 +42,8 @@ javac.classpath=\
     ${libs.jstl.classpath}:\
     ${libs.struts.classpath}:\
     ${libs.spring-framework300.classpath}:\
-    ${file.reference.ojdbc6.jar}
+    ${file.reference.ojdbc6.jar}:\
+    ${file.reference.log4j.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
