--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -29,6 +29,14 @@
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/jsp/error.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/WEB-INF/jsp/errorDao.jsp</location>
+    </error-page>
     <filter>
         <filter-name>EncodingFilter</filter-name>
         <filter-class>com.epam.testapp.presentation.filter.EncodingFilter</filter-class>
