footer body and menu container tablenews css forwards and errors

--- a/src/java/resource/ApplicationResource.properties
+++ b/src/java/resource/ApplicationResource.properties
@@ -34,6 +34,7 @@ errors.maxLength.strdate=Date can not be greater than {0} characters.
 errors.maxLength.brief=Brief can not be greater than {0} characters.
 errors.maxLength.content=Content can not be greater than {0} characters.
 errors.strdate.parse=Date must be in format mm/dd/yyyy.
+errors.news.deleted=News is not founded. Reload news list, please.
 # -- welcome --
 welcome.title=News management
 welcome.heading=Welcome to News management!
