footer body and menu container tablenews css forwards and errors final

--- a/src/java/resource/ApplicationResource.properties
+++ b/src/java/resource/ApplicationResource.properties
@@ -33,6 +33,10 @@ errors.maxLength.title=Title can not be greater than {0} characters.
 errors.maxLength.strdate=Date can not be greater than {0} characters.
 errors.maxLength.brief=Brief can not be greater than {0} characters.
 errors.maxLength.content=Content can not be greater than {0} characters.
+errors.maxLength.title.full=Title can not be greater than 100 characters.
+errors.maxLength.strdate.full=Date can not be greater than 10 characters.
+errors.maxLength.brief.full=Brief can not be greater than 500 characters.
+errors.maxLength.content.full=Content can not be greater than 2048 characters.
 errors.strdate.parse=Date must be in format mm/dd/yyyy.
 errors.news.deleted=News is not founded. Reload news list, please.
 # -- welcome --
