footer body and menu container tablenews css forwards and errors final final with menulabels

--- a/src/java/resource/ApplicationResource.properties
+++ b/src/java/resource/ApplicationResource.properties
@@ -25,6 +25,7 @@ errors.general=The process did not complete. Details should follow.
 errors.token=Request could not be completed. Operation is not in sequence.
 errors.confirmation=There are no selected news. Please select news for delete.
 msg.confirmation=Are you sure you want to delete this news?
+newslist.empty=News list is empty.
 errors.required.title=Title is required.
 errors.required.strdate=Date is required.
 errors.required.brief=Brief is required.
