footer body and menu container tablenews css forwards and errors final final with menulabels

--- a/src/java/resource/ApplicationResource.properties
+++ b/src/java/resource/ApplicationResource.properties
@@ -39,6 +39,9 @@ errors.maxLength.strdate.full=Date can not be greater than 10 characters.
 errors.maxLength.brief.full=Brief can not be greater than 500 characters.
 errors.maxLength.content.full=Content can not be greater than 2048 characters.
 errors.strdate.parse=Date must be in format mm/dd/yyyy.
+errors.invalid.day=Invalid day.
+errors.invalid.month=Invalid month.
+errors.invalid.year=Invalid day for leap year.
 errors.news.deleted=News is not founded. Reload news list, please.
 # -- welcome --
 welcome.title=News management
