footer body and menu container tablenews css forwards and errors final final with menulabels start hibernate and service hiber finish hiber again

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,7 +43,9 @@ javac.classpath=\
     ${libs.struts.classpath}:\
     ${libs.spring-framework300.classpath}:\
     ${file.reference.ojdbc6.jar}:\
-    ${file.reference.log4j.jar}
+    ${file.reference.log4j.jar}:\
+    ${libs.hibernate4-support.classpath}:\
+    ${libs.jpa2-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
