--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,8 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -28,6 +30,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.jandex-1.1.0.final.jar=lib/jandex-1.1.0.final.jar
 file.reference.log4j.jar=lib/log4j.jar
 file.reference.ojdbc6.jar=lib/ojdbc6.jar
 includes=**
@@ -44,14 +47,17 @@ javac.classpath=\
     ${libs.spring-framework300.classpath}:\
     ${file.reference.ojdbc6.jar}:\
     ${file.reference.log4j.jar}:\
-    ${libs.hibernate4-support.classpath}:\
-    ${libs.jpa2-persistence.classpath}
+    ${libs.hibernate4-persistence.classpath}:\
+    ${file.reference.jandex-1.1.0.final.jar}:\
+    ${libs.jpa2-persistence.classpath}:\
+    ${libs.hibernate4-support.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.hibernate4-persistencemodelgen.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
