footer body and menu container tablenews css forwards and errors final final with menulabels start hibernate and service hiber finish hiber again finish service

--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -2,6 +2,9 @@ libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=CopyLibs Task
 libs.CopyLibs.prop-version=2.0
+libs.Hibernate3.classpath=\
+    ${base}/Hibernate3/hibernate-core-3.5.1-Final.jar;\
+    ${base}/Hibernate3/hibernate3.jar
 libs.hibernate4-persistence.classpath=\
     ${base}/hibernate4-persistence/antlr-2.7.7.jar;\
     ${base}/hibernate4-persistence/c3p0-0.9.2.1.jar;\
@@ -47,6 +50,9 @@ libs.hibernate4-support.displayName=Hibernate 4.3.x
 libs.hibernate4-support.javadoc=\
     ${base}/hibernate4-support/javax.persistence-2.1.0-doc.zip
 libs.hibernate4-support.prop-maven-dependencies=\n                org.hibernate:hibernate-entitymanager:4.3.1.Final:jar\n            
+libs.Hibernate_3.classpath=\
+    ${base}/Hibernate_3/hibernate3.jar
+libs.Hibernate_3.displayName=Hibernate 3
 libs.javaee-endorsed-api-6.0.classpath=\
     ${base}/javaee-endorsed-api-6.0/javax.annotation.jar;\
     ${base}/javaee-endorsed-api-6.0/jaxb-api-osgi.jar;\
@@ -94,7 +100,6 @@ libs.spring-framework300.classpath=\
 libs.spring-framework300.displayName=Spring Framework 3.2.7
 libs.spring-framework300.prop-maven-dependencies=\n                org.springframework:spring-aop:3.2.7.RELEASE:jar\n                org.springframework:spring-aspects:3.2.7.RELEASE:jar\n                org.springframework:spring-beans:3.2.7.RELEASE:jar\n                org.springframework:spring-context:3.2.7.RELEASE:jar\n                org.springframework:spring-context-support:3.2.7.RELEASE:jar\n                org.springframework:spring-core:3.2.7.RELEASE:jar\n                org.springframework:spring-expression:3.2.7.RELEASE:jar\n                org.springframework:spring-framework-bom:3.2.7.RELEASE:jar\n                org.springframework:spring-instrument:3.2.7.RELEASE:jar\n                org.springframework:spring-instrument-tomcat:3.2.7.RELEASE:jar\n                org.springframework:spring-jdbc:3.2.7.RELEASE:jar\n                org.springframework:spring-jms:3.2.7.RELEASE:jar\n                org.springframework:spring-orm:3.2.7.RELEASE:jar\n                org.springframework:spring-oxm:3.2.7.RELEASE:jar\n                org.springframework:spring-struts:3.2.7.RELEASE:jar\n                org.springframework:spring-test:3.2.7.RELEASE:jar\n                org.springframework:spring-tx:3.2.7.RELEASE:jar\n                org.springframework:spring-web:3.2.7.RELEASE:jar\n                org.springframework:spring-webmvc:3.2.7.RELEASE:jar\n                org.springframework:spring-webmvc-portlet:3.2.7.RELEASE:jar\n            
 libs.struts.classpath=\
-    ${base}/struts/antlr-2.7.2.jar;\
     ${base}/struts/bsf-2.3.0.jar;\
     ${base}/struts/commons-beanutils-1.8.0.jar;\
     ${base}/struts/commons-chain-1.2.jar;\
