--- a/src/java/resource/ApplicationResource.properties
+++ b/src/java/resource/ApplicationResource.properties
@@ -63,6 +63,7 @@ label.ru=Russian
 menu.header=News
 menu.label.list=News List
 menu.label.add=Add News
+menu.label.edit=Edit News
 menu.label.view=News View
 # -- newsform --
 news.title=News Title
