--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -48,9 +48,7 @@ javac.classpath=\
     ${file.reference.ojdbc6.jar}:\
     ${file.reference.log4j.jar}:\
     ${file.reference.jandex-1.1.0.final.jar}:\
-    ${libs.jpa2-persistence.classpath}:\
-    ${libs.hibernate4-persistence.classpath}:\
-    ${libs.hibernate4-support.classpath}
+    ${libs.hibernate4-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
