footer body and menu container tablenews css forwards and errors final final with menulabels start hibernate and service hiber finish hiber again finish service

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,14 +43,14 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.jstl.classpath}:\
-    ${libs.struts.classpath}:\
     ${libs.spring-framework300.classpath}:\
-    ${file.reference.ojdbc6.jar}:\
     ${file.reference.log4j.jar}:\
     ${file.reference.jandex-1.1.0.final.jar}:\
+    ${file.reference.ojdbc6.jar}:\
     ${libs.jpa2-persistence.classpath}:\
     ${libs.hibernate4-persistence.classpath}:\
-    ${libs.hibernate4-support.classpath}
+    ${libs.hibernate4-support.classpath}:\
+    ${libs.struts.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
