footer body and menu container tablenews css forwards and errors final final with menulabels start hibernate and service hiber finish hiber again finish service

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -48,7 +48,9 @@ javac.classpath=\
     ${file.reference.ojdbc6.jar}:\
     ${file.reference.log4j.jar}:\
     ${file.reference.jandex-1.1.0.final.jar}:\
-    ${libs.hibernate4-persistence.classpath}
+    ${libs.hibernate4-persistence.classpath}:\
+    ${libs.hibernate4-support.classpath}:\
+    ${libs.jpa2-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
